scss/style.scss
//1.Nawigacja nie ma animacji
//2.usunac opisy z color
@use './mixins' as *;
@use './colors' as *;

* {
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body {
	/* font-family: 'Dancing Script', cursive; */
	font-family: 'Montserrat', sans-serif;
	font-size: 62.5%;
	overflow-x: hidden;
}

//NAV
.nav {
	display: flex;
	position: relative;

	button {
		position: fixed;
		top: 0;
		right: 0;
		padding: 1em;
		font-size: 2rem;
		border: none;
		background: none;
		color: black;
		cursor: pointer;
		z-index: 10;
	}

	&__items {
		position: fixed;
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		width: 100vw;
		height: 100vh;
		transform: translateX(100%);
		display: none;
		transition: transform 0.3s;
		background-color: $main;

		a {
			text-decoration: none;
			padding: 1em;
			text-align: center;
			font-size: 1.5rem;
			color: $secondary;
		}
	}
	.hidden {
		display: none;
	}

	.show-nav {
		display: flex;
		transform: translateX(0);
	}
}

//HEADER
.header {
	@include hero-img($gradient: $headerGradient, $imgFile: '../img/book-hero.jpg');
	height: 100vh;
	width: 100vw;
	z-index: 0;
	overflow-X: hidden;

	&__text-box {
		display: flex;
		flex-direction: column;
		justify-content: center;
		align-items: center;
		width: 100%;
		height: 100%;
		padding: 0 3em;
		text-align: center;
		font-size: 1.2rem;
	}
	&__heading {
		margin-bottom: 0.5em;
	}
}

//MAIN
.main {
	.homepage {
		text-align: center;
		background-color: $main;
		&__about-us,
		&__about-project,
		&__about-form {
			padding-bottom: 2em;

			h2 {
				padding-bottom: 0.5em;
				font-size: 2.3rem;
			}

			p {
				font-size: 0.9rem;
			}
		}
		&__about-us {
			padding: 10em 2em;
		}

		&__about-project {
			background-color: $secondary;
			padding: 10em 2em;
			color: $main;
		}

		&__about-form {
			padding: 10em 2em;
			img {
				width: 150px;
			}
		}
	}
}

//FOOTER
footer {
	padding: 1.3em;
	font-size: 0.8rem;
	text-align: center;
	color: $main;
	background-color: $footerColor;
	font-weight: bold;
}

